# TestCaseRunner

./: .gitignore  00_readme.txt  01_template.txt  API_REFERENCE.md  DebugLib.py  DebugMain.py  FileLib.py  GUI.py  HTMLtemplate.py  LICENSE  NOTICE.md  Output.py  README.md  REFERENCE.md  StatisticsLib.py  Table.js  VisualizerLib.py  app.py  debug_main.py  log_viewer.html  log_viewer.py  main.py  pyproject.toml  requirements.txt  result.html  runner.py  settings.py  start_mypy.bat  start_pytest.bat  start_test.bat  summary.txt  template.py  test.css  test.py  testcase_runner.py
mysrc/: HTMLtemplate.py  MyLib.py  Output.py  StatisticsLib.py  VisualizerLib.py  config.py  html_templates.py  program_rannner.py  result_classes.py  settings.py  statistics_lib.py
result/: log_0000.txt  log_0001.txt  log_0002.txt  log_0003.txt  log_0004.txt  log_0005.txt  log_0006.txt  log_0007.txt  log_0008.txt  log_0009.txt  log_0010.txt  log_0011.txt  log_0012.txt  log_0013.txt  log_0014.txt  log_0015.txt  log_0016.txt  log_0017.txt  log_0018.txt  log_0019.txt  log_0020.txt  log_0021.txt  log_0022.txt  log_0023.txt  log_0024.txt  log_0025.txt  log_0026.txt  log_0027.txt  log_0028.txt  log_0029.txt  log_0030.txt  log_0031.txt  log_0032.txt  log_0033.txt  log_0034.txt  log_0035.txt  log_0036.txt  log_0037.txt  log_0038.txt  log_0039.txt  (+10 more)
runner_/: config.ini  html_templates.py  runner.py
sample/: .gitignore  main.py  requirements.txt  runner.py
statistics/: Statistics.csv
templates/: checkbox.j2  diff_main.j2
testcase_runner/: log_viewer.js  runner.py  testcase_runner.py
(+64 files in other folders)
