[project]
name = "testcaserunner"
version = "0.2.1"
dependencies = [
    "numpy==1.26.3",
    "Jinja2==3.1.3",
    "matplotlib==3.8.2",
    "pandas==2.1.4",
    "seaborn==0.13.1",
    "tqdm==4.66.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = [
    "*.j2",
    "*.css",
    "*.js",
]
